# tonic-learning-chat

./: Cargo.toml  build.rs
proto/: chat.proto
src/: client.rs  server.rs
