[package]
name = "chat"
version = "0.1.0"
authors = ["Ertugrul Karademir <ekarademir@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-stream = "0.3.1"
tonic = "0.4.3"
prost = "0.7.0"
tokio = {version="1.5.0", features=["full"]}
futures = "0.3.14"
tokio-stream = "0.1.5"
uuid = {version="0.8.2", features=["v4"]}
log = "0.4.14"
env_logger = "0.8.3"
console = "0.14.1"
dialoguer = "0.8.0"


[build-dependencies]
tonic-build = "0.4.2"
